Fix: multiselect jumping and ellipsys for text in overflow of selectors

--- a/app/javascript/app/components/multiselect/multiselect-styles.scss
+++ b/app/javascript/app/components/multiselect/multiselect-styles.scss
@@ -20,12 +20,18 @@
   right: 0;
   left: 0;
   padding-left: 11px;
-  padding-right: 10px;
+  padding-right: 60px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   pointer-events: none;
   z-index: 10;
+
+  span {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .multiSelect :global {
